# wind-turbine-blade-moo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
configs/: default.yaml  high_accuracy.yaml  quick_test.yaml
notebooks/: demo.ipynb
outputs/: all_designs.csv  best_airfoil_coords.csv  best_airfoil_coords_solidworks.txt  best_sections.csv  local_sensitivity.csv  pareto.csv  report.md  summary.json
outputs/xfoil_cache/: 0012_re_1000000.csv  0012_re_150000.csv  0012_re_1800000.csv  0012_re_300000.csv  0012_re_3000000.csv  0012_re_600000.csv  23012_re_1000000.csv  23012_re_1800000.csv  23012_re_300000.csv  23012_re_3000000.csv  23012_re_600000.csv  2412_re_1000000.csv  2412_re_150000.csv  2412_re_1800000.csv  2412_re_300000.csv  2412_re_3000000.csv  2412_re_600000.csv  4412_re_1000000.csv  4412_re_150000.csv  4412_re_1800000.csv  4412_re_300000.csv  4412_re_3000000.csv  4412_re_600000.csv  4415_coords.csv  4415_re_1000000.csv  (+5 more)
outputs_high_accuracy/: all_designs.csv  best_airfoil_coords.csv  best_airfoil_coords_solidworks.txt  best_sections.csv  local_sensitivity.csv  pareto.csv  report.md  summary.json
tests/: test_bem.py  test_bem_cpp.py  test_optimizer.py  test_xfoil_backend.py
turbine_blade_moo/: __init__.py  __main__.py  _bem_cpp.cpp  bem.py  config.py  optimizer.py  pipeline.py  report.py  xfoil.py
wind_turbine/: __init__.py  _bem_cpp.cpp  bem.py  config.py  pipeline.py  xfoil.py
wind_turbine_blade_moo/: __init__.py  __main__.py  bem.py  optimizer.py  pipeline.py  plotting.py  report.py  xfoil.py
(+77 files in other folders)
